force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <label>Visit</label>
    <nameField>
        <displayFormat>Visit-{00000}</displayFormat>
        <label>Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>