force-app/main/default/objects/Visit__c/fields/Cat__c.field-meta.xml
<CustomField>
    <fullName>Cat__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cat</label>
    <referenceTo>Cat__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>