force-app/main/default/objects/Visit__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last date of visit</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>